--- a/projects/project1/src/frontend/css/main.css
+++ b/projects/project1/src/frontend/css/main.css
@@ -85,7 +85,7 @@ table{
     margin-right: auto;
     border-collapse: collapse;
     padding: 14px;
-    text-align: left;
+    text-align: center;
 }
 table, tr,th {
     border: 1px solid;
@@ -93,6 +93,10 @@ table, tr,th {
 
 th{
     background:#fdc47a;
+}
+
+th, td{
+    padding: 5px;
 }
 
 
@@ -147,6 +151,59 @@ hr{
     height: 2px;
 }
 
+
+.subInfo {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    background: #fff;
+    width: 285px;
+    margin: -140px 0 0 -182px;
+    padding: 40px;
+}
+
+.subInfo select{
+    outline: none;
+      display: block;
+      width: 100%;
+      margin: 0 0 20px;
+      padding: 10px 15px;
+      border: 1px solid #ccc;
+      font-family: Arial, Helvetica, sans-serif;
+      box-sizing: border-box;
+      font-size: 14px;
+}
+
+.subInfo input{
+    outline: none;
+      display: block;
+      width: 100%;
+      margin: 0 0 20px;
+      padding: 10px 15px;
+      border: 1px solid #ccc;
+      font-family: Arial, Helvetica, sans-serif;
+      box-sizing: border-box;
+      font-size: 14px;
+}
+
+.subInfo input:focus {
+        border: 1px solid #f8d8ae;
+}
+
+.subInfo button{
+    cursor: pointer;
+    background: #fdc47a;
+    width: 100%;
+    padding: 10px 15px;
+    border: none;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+}
+
+.subInfo button:hover{
+    background-color:#f2cb97;
+}
 
 
 footer{
