--- a/projects/project1/src/frontend/css/main.css
+++ b/projects/project1/src/frontend/css/main.css
@@ -271,8 +271,22 @@ hr{
 }
 
 
+img{
+    border-radius: 10px;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+    max-width: 100%;
+     height: 50%;
+    
+}
+
+
 footer{
-    background-color:  aliceblue;
+    position:fixed;
+    bottom:0;
+    padding:10px;
+    width:100%;
+    background-color: white;
     text-align: center;
-    padding: 1px;
     }
